hehe literally less than a line, 4 characters to fix an issue with height of scrollable table that made it leave a fixed gap underneath until it was the 500px tall

--- a/generalStyle.css
+++ b/generalStyle.css
@@ -209,7 +209,7 @@ table.possibleInputTable, .possibleInputTable th, .possibleInputTable td {
 
 .scrollATable {
     width: 80%;
-    height: 500px;
+    max-height: 500px;
     margin-left: auto;
     margin-right: auto;
     overflow-y: auto;
